test/conformance/chainsaw/image-validating-policies/context/imagedata/image-data/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: ImageValidatingPolicy
metadata:
  name: ivpol-image-data-sample
spec:
  validationActions:
  - Deny
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
  variables:
    - name: image
      expression: >-
        image.GetMetadata("ghcr.io/kyverno/test-verify-image:signed")
    - name: exist
      expression: >-
        variables.image != null
  validations:
    - expression: >-
        !variables.exist
      messageExpression: "'expect variables.exist to be false, got: ' + string(variables.exist)"
    - expression: >-
        images.containers.map(image, verifyImageSignatures(image, [attestors.notary])).all(e, e > 0)
      message: failed to verify image with notary cert
  matchImageReferences:
    - glob: ghcr.io/*
  attestors:
    - name: notary
      notary:
        certs:
          value: |-
            -----BEGIN CERTIFICATE-----
            MIIDTTCCAjWgAwIBAgIJAPI+zAzn4s0xMA0GCSqGSIb3DQEBCwUAMEwxCzAJBgNV
[...]
            uOKpF5rWAruB5PCIrquamOejpXV9aQA/K2JQDuc0mcKz
            -----END CERTIFICATE-----
  attestations:
    - name: sbom
      referrer:
        type: sbom/cyclone-dx
