test/conformance/chainsaw/image-validating-policies/context/imagedata/image-data/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: image-data
spec:
  steps:
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-image-validating-policy-ready
    use:
      template: ../../../../_step-templates/image-validating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: ivpol-image-data-sample
        - name: message
          value: ""
  - name: create deployment
    try:
    - create:
        file: deployment.yaml
        timeout: 90s
        expect:
          - check:
              ($error): >-
                admission webhook "ivpol.validate.kyverno.svc-fail" denied the request: Policy ivpol-image-data-sample failed: expect variables.exist to be false, got: true
